Bug/4309: make row content wrap if there is no available space (#4314)
* Work for #4309: get rid of .sv-vue-row-additional styles

* Work for #4309: make rows wrap content if there is no available space

* Work for #4309: decrease gap between rows in row element

--- a/src/defaultV2-theme/blocks/sd-row.scss
+++ b/src/defaultV2-theme/blocks/sd-row.scss
@@ -11,22 +11,26 @@
   box-shadow: 0px 1px 2px $shadow-inner;
   border-radius: calcSize(0.5);
 }
-.sd-page > .sd-row--multiple {
-  padding: 0 var(--sd-base-padding) var(--sd-base-padding);
-}
 .sd-row--multiple {
-  gap: calcSize(2);
   margin-top: calcSize(2);
   .sd-question {
     padding-right: 0 !important;
   }
-  .sv-vue-row-additional-div {
-    display: flex;
-    flex-wrap: initial;
-    flex-direction: row;
-    width: 100%;
-    gap: calcSize(2);
+}
+:not(.svc-row) > .sd-row--multiple {
+  row-gap: calcSize(1);
+  margin-left: calcSize(-2);
+  width: calc(100% + 2 * #{$base-unit});
+  flex-wrap: wrap;
+  > div  {
+    box-sizing: border-box;
+    padding-left: calcSize(2); 
   }
+}
+.sd-page:not(.svc-row) > .sd-row--multiple {
+  padding: 0  var(--sd-base-padding) var(--sd-base-padding) calc(var(--sd-base-padding) - 2 * #{$base-unit});
+  margin-left: 0;
+  width: 100%;
 }
 .svc-row .sd-row--multiple {
   overflow: auto;
